# grpc-server-rust

./: .env  Cargo.toml  Dockerfile  README.Docker.md  compose.yaml
src/: main.rs
