[package]
name = "grpc-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
grpc-proto = { git = "https://github.com/gggiulio77/grpc-proto-rust.git" }
dotenv = "0.15.0"

[build-dependencies]
tonic-build = "0.11"
